--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,21 +19,15 @@ jobs:
         id: get_version
         run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
       
-      - name: Create Release
+      - name: Create Release with Auto Notes
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref }}
-          release_name: JW Meeting Timer ${{ steps.get_version.outputs.version }}
-          draft: false
-          prerelease: false
-          body: |
-            JW Meeting Timer ${{ steps.get_version.outputs.version }}
-            
-            Changes in this version:
-            - [List your changes here]
+          name: JW Meeting Timer ${{ steps.get_version.outputs.version }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-windows:
     needs: create-release
