--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,37 +4,32 @@ on:
   push:
     tags:
       - 'v*' # Run workflow on version tags, e.g., v1.0.0
+    paths-ignore:
+      - version.json
 
 jobs:
-  create-release:
+  release-please:
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version: ${{ steps.get_version.outputs.version }}
+      release_created: ${{ steps.release.outputs.release_created }}
+      version: ${{ steps.release.outputs.version }}
+      upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      
-      - name: Get version from tag
-        id: get_version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-      
-      - name: Create Release with Auto Notes
-        id: create_release
-        uses: softprops/action-gh-release@v1
+      - name: Release Please
+        id: release
+        uses: googleapis/release-please-action@v4
         with:
-          tag_name: ${{ github.ref }}
-          name: JW Meeting Timer ${{ steps.get_version.outputs.version }}
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          release-type: simple
 
   build-windows:
-    needs: create-release
+    needs: release-please
     runs-on: windows-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Show release version
+        run: echo "Building version ${{ needs.release-please.outputs.version }}"
         
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -49,22 +44,25 @@ jobs:
           
       - name: Build with PyInstaller
         run: |
-          pyinstaller --name "JW Meeting Timer" --windowed --icon=assets/icons/app-icon.ico --noconfirm --onedir --clean main.py --add-data "assets;assets" --add-data "resources;resources" --collect-data src
+          pyinstaller --name "OnTime Meeting Timer" --windowed --icon=assets/icons/app-icon.ico --noconfirm --onedir --clean main.py --add-data "assets;assets" --add-data "resources;resources" --collect-data src
 
       - name: Download and Install Inno Setup
         run: |
           Invoke-WebRequest -Uri "https://jrsoftware.org/download.php/is.exe" -OutFile "is.exe"
           Start-Process -FilePath "is.exe" -ArgumentList "/VERYSILENT /SUPPRESSMSGBOXES /NORESTART /SP-" -Wait
 
+      - name: Verify Inno Setup installation
+        run: if (!(Test-Path "C:\Program Files (x86)\Inno Setup 6\ISCC.exe")) { Write-Error "ISCC.exe not found!" }
+
       - name: Create Inno Setup script
         run: |
-          $version = "${{ needs.create-release.outputs.version }}"
+          $version = "${{ needs.release-please.outputs.version }}"
           $iss = @"
-          #define MyAppName "JW Meeting Timer"
+          #define MyAppName "OnTime Meeting Timer"
           #define MyAppVersion "$version"
           #define MyAppPublisher "Your Name"
           #define MyAppURL "https://github.com/berb-q/meeting_timer"
-          #define MyAppExeName "JW Meeting Timer.exe"
+          #define MyAppExeName "OnTime Meeting Timer.exe"
 
           [Setup]
           AppId={{F9A6E8D8-3B2F-4A8A-B5D1-57A7F2E7BAC7}
@@ -77,7 +75,7 @@ jobs:
           DefaultDirName={autopf}\{#MyAppName}
           DisableProgramGroupPage=yes
           OutputDir=.
-          OutputBaseFilename=JWMeetingTimer-{#MyAppVersion}-setup
+          OutputBaseFilename=OnTimeMeetingTimer-{#MyAppVersion}-setup
           Compression=lzma
           SolidCompression=yes
           WizardStyle=modern
@@ -90,7 +88,7 @@ jobs:
           Name: "startupitem"; Description: "Run at system startup"; GroupDescription: "Startup Options"
 
           [Files]
-          Source: "dist\JW Meeting Timer\*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
+          Source: "dist\OnTime Meeting Timer\*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs createallsubdirs
 
           [Icons]
           Name: "{autoprograms}\{#MyAppName}"; Filename: "{app}\{#MyAppExeName}"
@@ -111,17 +109,20 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./JWMeetingTimer-${{ needs.create-release.outputs.version }}-setup.exe
-          asset_name: JWMeetingTimer-${{ needs.create-release.outputs.version }}-setup.exe
+          upload_url: ${{ needs.release-please.outputs.upload_url }}
+          asset_path: ./OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}-setup.exe
+          asset_name: OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}-setup.exe
           asset_content_type: application/octet-stream
 
   build-macos:
-    needs: create-release
+    needs: release-please
     runs-on: macos-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Show release version
+        run: echo "Building version ${{ needs.release-please.outputs.version }}"
         
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -136,42 +137,47 @@ jobs:
           
       - name: Build with PyInstaller
         run: |
-          pyinstaller --name "JW Meeting Timer" --windowed --icon=assets/icons/app-icon.icns --noconfirm --onedir --clean main.py --add-data "assets:assets" --add-data "resources:resources" --collect-data src
+          pyinstaller --name "OnTime Meeting Timer" --windowed --icon=assets/icons/app-icon.icns --noconfirm --onedir --clean main.py --add-data "assets:assets" --add-data "resources:resources" --collect-data src
       
       - name: Create DMG settings file
         run: |
-          echo 'app = defines.get("app", "dist/JW Meeting Timer.app")' > dmg_settings.py
-          echo 'appname = defines.get("appname", "JW Meeting Timer")' >> dmg_settings.py
-          echo 'window_rect = ((100, 100), (640, 480))' >> dmg_settings.py
+          echo 'app = defines.get("app", "dist/OnTime Meeting Timer.app")' > dmg_settings.py
+          echo 'appname = defines.get("appname", "OnTime Meeting Timer")' >> dmg_settings.py
+          echo 'background = "assets/dmg_background.png"' >> dmg_settings.py
+          echo 'volume_name = "OnTime Meeting Timer"' >> dmg_settings.py
+          echo 'window_rect = ((100, 100), (640, 400))' >> dmg_settings.py
           echo 'icon_size = 128' >> dmg_settings.py
           echo 'text_size = 12' >> dmg_settings.py
           echo 'icon_locations = {' >> dmg_settings.py
-          echo '    appname: (160, 240),' >> dmg_settings.py
-          echo '    "Applications": (480, 240),' >> dmg_settings.py
+          echo '    appname: (140, 120),' >> dmg_settings.py
+          echo '    "Applications": (500, 120),' >> dmg_settings.py
           echo '}' >> dmg_settings.py
           echo 'files = [app]' >> dmg_settings.py
           echo 'symlinks = {"Applications": "/Applications"}' >> dmg_settings.py
       
       - name: Build DMG
         run: |
-          dmgbuild -s dmg_settings.py "JW Meeting Timer" "JWMeetingTimer-${{ needs.create-release.outputs.version }}.dmg"
+          dmgbuild -s dmg_settings.py "OnTime Meeting Timer" "OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.dmg"
         
       - name: Upload DMG to release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./JWMeetingTimer-${{ needs.create-release.outputs.version }}.dmg
-          asset_name: JWMeetingTimer-${{ needs.create-release.outputs.version }}.dmg
+          upload_url: ${{ needs.release-please.outputs.upload_url }}
+          asset_path: ./OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.dmg
+          asset_name: OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.dmg
           asset_content_type: application/octet-stream
 
   build-linux:
-    needs: create-release
+    needs: release-please
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Show release version
+        run: echo "Building version ${{ needs.release-please.outputs.version }}"
         
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -188,18 +194,18 @@ jobs:
           
       - name: Build with PyInstaller
         run: |
-          pyinstaller --name "jwmeetingtimer" --windowed --icon=assets/icons/app-icon.png --noconfirm --onedir --clean main.py --add-data "assets:assets" --add-data "resources:resources" --collect-data src
+          pyinstaller --name "ontime" --windowed --icon=assets/icons/app-icon.png --noconfirm --onedir --clean main.py --add-data "assets:assets" --add-data "resources:resources" --collect-data src
       
       - name: Create .desktop file
         run: |
-          echo "[Desktop Entry]" > jwmeetingtimer.desktop
-          echo "Name=JW Meeting Timer" >> jwmeetingtimer.desktop
-          echo "Comment=Timer application for managing meeting schedules" >> jwmeetingtimer.desktop
-          echo "Exec=jwmeetingtimer" >> jwmeetingtimer.desktop
-          echo "Icon=jwmeetingtimer" >> jwmeetingtimer.desktop
-          echo "Terminal=false" >> jwmeetingtimer.desktop
-          echo "Type=Application" >> jwmeetingtimer.desktop
-          echo "Categories=Utility;" >> jwmeetingtimer.desktop
+          echo "[Desktop Entry]" > ontime.desktop
+          echo "Name=OnTime Meeting Timer" >> ontime.desktop
+          echo "Comment=Timer application for managing meeting schedules" >> ontime.desktop
+          echo "Exec=ontime" >> ontime.desktop
+          echo "Icon=ontime" >> ontime.desktop
+          echo "Terminal=false" >> ontime.desktop
+          echo "Type=Application" >> ontime.desktop
+          echo "Categories=Utility;" >> ontime.desktop
       
       - name: Download AppImage tools
         run: |
@@ -212,37 +218,40 @@ jobs:
           mkdir -p AppDir/usr/share/applications
           mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
           
-          cp -r dist/jwmeetingtimer/* AppDir/usr/bin/
-          cp jwmeetingtimer.desktop AppDir/usr/share/applications/
-          cp assets/icons/app-icon.png AppDir/usr/share/icons/hicolor/256x256/apps/jwmeetingtimer.png
+          cp -r dist/ontime/* AppDir/usr/bin/
+          cp ontime.desktop AppDir/usr/share/applications/
+          cp assets/icons/app-icon.png AppDir/usr/share/icons/hicolor/256x256/apps/ontime.png
           
-          ln -s usr/share/applications/jwmeetingtimer.desktop AppDir/jwmeetingtimer.desktop
-          ln -s usr/share/icons/hicolor/256x256/apps/jwmeetingtimer.png AppDir/jwmeetingtimer.png
+          ln -s usr/share/applications/ontime.desktop AppDir/ontime.desktop
+          ln -s usr/share/icons/hicolor/256x256/apps/ontime.png AppDir/ontime.png
           
           # Create AppRun script
           echo '#!/bin/bash' > AppDir/AppRun
           echo 'SELF=$(readlink -f "$0")' >> AppDir/AppRun
           echo 'HERE=${SELF%/*}' >> AppDir/AppRun
           echo 'export PATH="${HERE}/usr/bin:${PATH}"' >> AppDir/AppRun
-          echo 'exec "${HERE}/usr/bin/jwmeetingtimer" "$@"' >> AppDir/AppRun
+          echo 'exec "${HERE}/usr/bin/ontime" "$@"' >> AppDir/AppRun
           chmod +x AppDir/AppRun
       
+      - name: Install libfuse2
+        run: sudo apt-get update && sudo apt-get install -y libfuse2
+
       - name: Build AppImage
         run: |
-          VERSION=${{ needs.create-release.outputs.version }} ./appimagetool-x86_64.AppImage AppDir JWMeetingTimer-${{ needs.create-release.outputs.version }}.AppImage
+          VERSION=${{ needs.release-please.outputs.version }} ./appimagetool-x86_64.AppImage AppDir OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.AppImage
         
       - name: Upload AppImage to release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./JWMeetingTimer-${{ needs.create-release.outputs.version }}.AppImage
-          asset_name: JWMeetingTimer-${{ needs.create-release.outputs.version }}.AppImage
+          upload_url: ${{ needs.release-please.outputs.upload_url }}
+          asset_path: ./OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.AppImage
+          asset_name: OnTimeMeetingTimer-${{ needs.release-please.outputs.version }}.AppImage
           asset_content_type: application/octet-stream
 
   update-version-json:
-    needs: [create-release, build-windows, build-macos, build-linux]
+    needs: [release-please, build-windows, build-macos, build-linux]
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -250,20 +259,21 @@ jobs:
       
       - name: Generate version.json
         run: |
-          VERSION=${{ needs.create-release.outputs.version }}
+          VERSION=${{ needs.release-please.outputs.version }}
           TODAY=$(date +"%Y-%m-%d")
           REPO="${GITHUB_REPOSITORY}"
+          RELEASE_NOTES="${{ needs.release-please.outputs.release_notes }}"
           
           cat > version.json << EOF
           {
             "version": "${VERSION}",
             "releaseDate": "${TODAY}",
             "downloadUrl": {
-              "windows": "https://github.com/${REPO}/releases/download/v${VERSION}/JWMeetingTimer-${VERSION}-setup.exe",
-              "macos": "https://github.com/${REPO}/releases/download/v${VERSION}/JWMeetingTimer-${VERSION}.dmg",
-              "linux": "https://github.com/${REPO}/releases/download/v${VERSION}/JWMeetingTimer-${VERSION}.AppImage"
+              "windows": "https://github.com/${REPO}/releases/download/v${VERSION}/OnTimeMeetingTimer-${VERSION}-setup.exe",
+              "macos": "https://github.com/${REPO}/releases/download/v${VERSION}/OnTimeMeetingTimer-${VERSION}.dmg",
+              "linux": "https://github.com/${REPO}/releases/download/v${VERSION}/OnTimeMeetingTimer-${VERSION}.AppImage"
             },
-            "releaseNotes": "Version ${VERSION} of JW Meeting Timer. See GitHub for full release notes."
+            "releaseNotes": ${RELEASE_NOTES@Q}
           }
           EOF
           
@@ -274,5 +284,5 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add version.json
-          git commit -m "Update version.json to ${{ needs.create-release.outputs.version }}"
+          git commit -m "Update version.json to ${{ needs.release-please.outputs.version }}" || echo "No changes to commit"
           git push origin main
