--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*' # Run workflow on version tags, e.g., v1.0.0
+      - 'v*'        # e.g. v1.0.0
+      - 'timerV*'   # e.g. timerV1.0.0
 
 jobs:
   create-release:
@@ -17,7 +18,12 @@ jobs:
       
       - name: Get version from tag
         id: get_version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          ref=${GITHUB_REF#refs/tags/}
+          # Strip allowed prefixes (v or timerV)
+          version=${ref#v}
+          version=${version#timerV}
+          echo "version=${version}" >> $GITHUB_OUTPUT
       
       - name: Create Release with Auto Notes
         id: create_release
