fix: ensure newline at end of file in requirements.txt and add platformdirs dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ Pillow>=11.2.1  # Required by qrcode
 
 # For JSON handling and data processing
 jsonschema>=4.23.0
+
+# For cache directory
+platformdirs>=4.3.7
