--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
         uses: googleapis/release-please-action@v4
         with:
           release-type: simple
+          skip-github-release: false
+          skip-labeling: true
           
   build-windows:
     needs: release-please
