--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'v*' # Run workflow on version tags, e.g., v1.0.0
-      - 'timerV*'
+    branches:
+      - main
     paths-ignore:
       - version.json
 
